<resources>
    <string name="app_name">Weather</string>
    <string name="loading">Loading</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="cloud_cover">Clouds cover</string>
    <string name="aqi">AQI</string>
    <string name="standard">Standard</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
    <string name="pm10">PM₁₀</string>
    <string name="pm2_5">PM₂.₅</string>
    <string name="no">NO</string>
    <string name="no2">NO₂</string>
    <string name="o3">O₃</string>
    <string name="co">CO</string>
    <string name="so2">SO₂</string>
    <string name="nh3">NH₃</string>
    <string name="next24hours">Next 24 Hours</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="next5days">Next 5 Days</string>
    <string name="air_quality_index">Air Quality Index</string>
</resources>