<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".aqiActivity">
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/air_quality_index"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:id="@+id/aqiCondition"
            android:text="@string/loading"
            android:layout_marginBottom="30dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pmTen"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pmTwoFive"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pm10"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pm2_5"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/no"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/noTwo"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/no2"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/oThree"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/co"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/o3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/co"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/soTwo"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/nhThree"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/so2"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nh3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>
    </TableRow>
    <TableRow
        android:gravity="center_horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="All measurements are in µm/g³"/>
    </TableRow>
</TableLayout>
</ScrollView>