<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background">
<TableLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".MainActivity">
    <TableRow>
        <TextView android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loading"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_btn"
            android:id="@+id/refresh_btn"
            android:contentDescription="Refresh" />
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_vert"
            android:id="@+id/more_btn"
            android:contentDescription="Refresh" />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/lastUpdate"
            android:text="Last update" />
    </TableRow>
    <TableRow>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!--<TextView android:id="@+id/minMax"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Max: 0℉/Min: 0℉"/>-->
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainTemp"
                android:text="@string/loading"
                android:textSize="60sp"/>
            <TextView android:id="@+id/feelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:id="@+id/weatherIcon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainCondition"
                android:scrollHorizontally="false"
                android:ellipsize="none"
                android:text="@string/loading"
                android:textSize="20sp"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </TableRow><!--humidity,pressure,sun rise, sun set, visibility, wind-->
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/humidity"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/pressure"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pressure"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/wind_arrow"
                android:id="@+id/windArrow"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wind"
                android:gravity="center_horizontal"
                android:text="@string/loading"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/visibility"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/wind"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/visibility"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/sunrise"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/sunset"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sunrise"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sunset"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/cloud"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/aqi"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cloud_cover"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/aqi"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="0dp"
            android:text="@string/next24hours"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>
        <TextView android:layout_width="wrap_content"
            android:text="@string/more_details"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/moreDetails"/>
    </TableRow>
    <TableRow>
        <HorizontalScrollView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="0dp">
            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time1"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon1">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp1"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time2"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon2">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp2"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time3"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon3">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp3"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time4"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon4">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp4"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time5"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon5">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp5"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time6"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon6">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp6"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time7"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon7">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp7"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time8"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/icon8">
                        </ImageView>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temp8"
                            android:layout_gravity="center_horizontal">
                        </TextView>
                    </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </TableRow>
</TableLayout>
</ScrollView>